tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_95.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((- ((0 MOD x) * (- z))) - (+ ((0 + z) MOD (z MOD 0))));
               y := ((((z MOD 1223) + (200 + 200)) - (+ (0 * 1))) * (+ (- (y - y))));
               z := (+ (- ((y MOD 2) + (1223 * 2))));
               z := (+ (((- y) DIV (2 + y)) MOD (- (1223 DIV 200))));
               z := ((- (+ (1 + 2))) DIV (((- z) + (200 + 0)) - ((1 - 0) MOD (0 + 2))));
  (* error *)  r := ((((q * y) + (0 - z)) + (- (x * 2))) # (((+ 200) MOD (- 1)) + ((0 * 1) DIV (+ 2))));
               p := ((((z + z) - (0 * y)) MOD (+ (2 + 1223))) # ((- (200 - z)) * ((0 * y) * (200 MOD 0))));
               r := (((+ (z - 2)) DIV ((+ y) - (+ z))) # ((- (+ z)) - ((1223 MOD 2) * (1223 * 0))));
               r := (~ ((- (1223 MOD x)) = ((y - 0) DIV (- 1223))));
               r := ((+ ((1 DIV z) * (+ 200))) # (- ((x DIV 0) MOD (1223 MOD z))))
END Test16.